--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,8 @@ body {
   padding: 2.5rem;
   border-radius: 10px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  width: 100%;
-  max-width: 450px;
+  /* width: 100%; */
+  width: 450px;
   text-align: center;
 }
 
